<resources>
    <string name="app_name">Cooking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_translate_api_key"> YOUR_API_KEY_HERE</string>



    <string name="profile_image_desc">Profile Image</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="description1_hint">Description 1</string>
    <string name="description2_hint">Description 2</string>
    <string name="description3_hint">Description 3</string>
    <string name="description4_hint">Description 4</string>
    <string name="description5_hint">Description 5</string>
    <string name="save_button_text">Save</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Hindi</item>
        <item>Gujarati</item>
        <item>Bengali</item>
        <!-- Add other languages as needed -->
    </string-array>

</resources>