<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileDetailsActivity">







        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/circle"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_image_desc" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileImageView"
            android:layout_marginBottom="16dp"
            android:hint="@string/name_hint"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameEditText"
            android:layout_marginBottom="16dp"
            android:hint="@string/email_hint"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailEditText"
            android:layout_marginBottom="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/description1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordEditText"
            android:layout_marginBottom="8dp"
            android:hint="@string/description1_hint"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/description2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description1EditText"
            android:layout_marginBottom="8dp"
            android:hint="@string/description2_hint"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/description3EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description2EditText"
            android:layout_marginBottom="8dp"
            android:hint="@string/description3_hint"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/description4EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description3EditText"
            android:layout_marginBottom="8dp"
            android:hint="@string/description4_hint"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/description5EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description4EditText"
            android:layout_marginBottom="16dp"
            android:hint="@string/description5_hint"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/description5EditText"
            android:text="@string/save_button_text" />

    </RelativeLayout>



